[tool.poetry]
name = "h6"
version = "0.1.0"
description = "A Python library to emulate a Zoom H6 recorder remote control"
authors = ["Matias Godoy <mattogodoy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mattogodoy/h6/"
repository = "https://github.com/mattogodoy/h6/"
keywords = ["zoom", "h6", "remote"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
